--- a/README.textile
+++ b/README.textile
@@ -1,8 +1,8 @@
-h1. PyroChunks 1.0
+h1. PyroChunks 1.1
 
 h2. Description
 
-Now updated for PyroCMS 1.x.
+Now updated for PyroCMS 1.3
 
 Module for "PyroCMS":http://pyrocms.com, a CMS based on CodeIgniter. Allows users to create and manage small chunks of reusable content for their site. Useful for giving clients access to small chunks of content that are not page content and can be edited as text, WYSIWYG, and HTML content.
 
