--- a/README.textile
+++ b/README.textile
@@ -6,6 +6,14 @@ Now updated for PyroCMS 1.3
 
 Module for "PyroCMS":http://pyrocms.com, a CMS based on CodeIgniter. Allows users to create and manage small chunks of reusable content for their site. Useful for giving clients access to small chunks of content that are not page content and can be edited as text, WYSIWYG, and HTML content.
 
+h2. Changelog
+
+h3. v1.1 - July 26, 2011
+
+* Updates to work with PyroCMS 1.3
+* Autocomplete for chunk slugs
+* Shows Chunk type in list
+
 h2. Authors
 
 * "Adam Fairholm":http://twitter.com/adamfairholm
