--- a/README.textile
+++ b/README.textile
@@ -45,3 +45,4 @@ Create snippets and add the snippet code into your layouts where you'd like them
 h2. Translations
 
 Arabic - by "Ossama Khayat":https://github.com/okhayat
+Slovenian - by "Danijel Ocepek":https://github.com/imamo
