--- a/README.textile
+++ b/README.textile
@@ -13,6 +13,7 @@ h3. v2.1 - October 19, 2011
 * Upgrading to PyroCMS 2.0 interface styles
 * New image snippet type
 * Save & Close option for editing snippets
+* Slovenian Translation
 
 h3. v2.0 - September 16, 2011
 
@@ -51,3 +52,4 @@ Create snippets and add the snippet code into your layouts where you'd like them
 h2. Translations
 
 Arabic - by "Ossama Khayat":https://github.com/okhayat
+Slovenian - by "Danijel Ocepek":https://github.com/imamo
