--- a/readme.textile
+++ b/readme.textile
@@ -1,55 +1,18 @@
-h1. PyroSnippets 2.1
-
-h2. Description
+h1. PyroSnippets 2.2
 
 (Formerly PyroChunks, PyroSnippets had a name change in order to not be confused with the new feature of PyroCMS, page chunks. See update instructions below to go from PyroChunks to PyroSnippets.)
 
 PyroSnippets allows users to create and manage small snippets of reusable content for their site. Useful for giving clients access to small chunks of content that are not page content and can be edited as text, WYSIWYG, and HTML content.
 
+h2. Documentation
+
+Documentation can be founder "here":http://parse19.com/pyrosnippets/docs.
+
 h2. Changelog
 
-h3. v2.1 - October 19, 2011
-
-* Upgrading to PyroCMS 2.0 interface styles
-* New image snippet type
-* Save & Close option for editing snippets
-* Slovenian Translation
-
-h3. v2.0 - September 16, 2011
-
-* Change to PyroSnippets name
-* New permissions addition allows you to restrict member groups to just editing snippet content
-* Updated interface styles for PyroCMS 1.3
-
-h3. v1.1 - July 26, 2011
-
-* Updates to work with PyroCMS 1.3
-* Autocomplete for chunk slugs
-* Shows Chunk type in list
+"http://parse19.com/pyrosnippets/docs/changelog":http://parse19.com/pyrosnippets/docs/changelog
 
 h2. Authors
 
 * "Adam Fairholm":http://twitter.com/adamfairholm
 * "Stephen Cozart":http://twitter.com/stephencozart
-
-h2. Upgrading from PyroChunks
-
-Do you currently have PyroChunks installed and want to switch to PyroSnippets? Good news! Upgrading is easy and your {pyro:chunk:chunk_slug} tags will still work. Just follow the steps below:
-
-* Back up your PyroCMS database (can't be too careful)
-* Go into your addons/shared_addons/modules or addons/default/modules folder and delete the chunks folder. *Do not uninstall PyroChunks. Just delete the folder. Uninstalling it will delete your chunks data*.
-* Upload the snippets folder into your addons/shared_addons/modules or addons/default/module modules folder.
-* Install PyroSnippets from the back end. That should be it!
-
-h2. Regular Installation
-
-To install, add the "snippets" folder to the addons/shared_addons/modules or addons/default/modules folder of your site.
-
-h2. Usage
-
-Create snippets and add the snippet code into your layouts where you'd like them to be. Pretty simple! 
-
-h2. Translations
-
-Arabic - by "Ossama Khayat":https://github.com/okhayat
-Slovenian - by "Danijel Ocepek":https://github.com/imamo
